src/Tests/Error/GreaterOrEqualThanError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class GreaterOrEqualThanError extends AssertError
{
}
